tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_56.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  x := (+ ((- (r - 200)) * ((x DIV x) * (1223 + z))));
               q := ((((+ 1223) MOD (x DIV 200)) - ((0 MOD y) MOD (2 + 1))) >= (- ((1223 DIV 0) + (200 DIV x))));
               z := ((((2 * 0) DIV (2 - x)) MOD (- (y MOD 0))) - ((+ (- z)) MOD ((- x) * (x - z))));
               y := (+ (- ((z - y) MOD (2 MOD x))));
               p := ((((0 DIV 200) + (- y)) * ((1223 - 2) + (+ 2))) = (- ((2 + 200) DIV (+ y))));
               y := ((((x + y) MOD (1 + 2)) MOD ((z MOD y) MOD (x DIV y))) - ((- (1223 + 1223)) MOD ((x DIV y) - (200 + 1223))));
               q := ((+ ((1 * 1) - (1 - x))) # (((- 2) + (2 + z)) + ((200 * 1223) + (2 - 1))));
               r := ((((2 DIV 200) DIV (y + 0)) + (+ (0 * 0))) >= (((z + 0) + (2 + y)) + ((2 MOD 1223) MOD (+ 0))));
               p := (~ (((- 2) - (x DIV 0)) <= ((200 * 0) + (200 MOD 2))));
               p := ((((0 + 0) DIV (1223 MOD z)) DIV ((2 + 200) - (0 MOD 1223))) > ((- (- z)) - (+ (1 DIV 1223))))
END Test11.